# Dyktando

./: .gitignore  main.py  pyproject.toml
answers/: answers.txt
dyktando/: app.py  main.py  misc.py  question_server.py  speech.py
questions/: questions.txt
tasks/: 2.txt  smok.txt
